--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
 
   <section class="overflow-hidden bg-gray-50 sm:grid sm:grid-cols-2">
     <div class="p-8 md:p-12 lg:px-16 lg:py-24">
-      <div class="mx-auto max-w-xl text-center ltr:sm:text-left rtl:sm:text-right"
-      >
+      <div class="mx-auto max-w-xl text-center ltr:sm:text-left rtl:sm:text-right">
         <h2 class="text-2xl font-bold text-gray-900 md:text-3xl">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit
-        </h2>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit</h2>
 
         <p class="hidden text-gray-500 md:mt-4 md:block">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et, egestas
